<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="432dp"
        android:layout_height="723dp"
        app:srcCompat="@drawable/welcome"
        tools:layout_editor_absoluteX="-20dp"
        tools:layout_editor_absoluteY="-11dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/rectanglpay"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="56dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="178dp"
        android:layout_height="63dp"
        android:background="@drawable/save"
        android:text="Button"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="642dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="275dp"
        android:layout_height="46dp"
        android:background="@drawable/firstname"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/profname"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="247dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="First Name"
        android:textColor="#C0A2C6"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="228dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="277dp"
        android:layout_height="49dp"
        android:background="@drawable/firstname"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/prolname"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="319dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="277dp"
        android:layout_height="46dp"
        android:background="@drawable/firstname"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/pronumber"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="536dp" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="274dp"
        android:layout_height="45dp"
        android:background="@drawable/firstname"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/proemail"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="464dp" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="274dp"
        android:layout_height="51dp"
        android:background="@drawable/firstname"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/progender"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="393dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Last Name"
        android:textColor="#C0A2C6"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="300dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender"
        android:textColor="#C0A2C6"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="374dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phone"
        android:textColor="#C0A2C6"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="517dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="E-mail"
        android:textColor="#C0A2C6"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="445dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="140dp"
        android:layout_height="126dp"
        app:srcCompat="@drawable/user"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="66dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="22dp"
        android:layout_height="21dp"
        app:srcCompat="@drawable/leftarrow"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Profile"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="28dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/bell"
        tools:layout_editor_absoluteX="347dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>